# AIO

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cliff.toml  index.html  package-lock.json  package.json  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml
AIO/: package-lock.json  package.json  test.py  tsconfig.json
AIO/src/: App.css  App.jsx  App.tsx  Layout.jsx  Layout.tsx  index.css  index.jsx  index.tsx  store.ts
AIO/src-tauri/: Cargo.toml  tauri.conf.json
docs/: MCP_INTEGRATION.md
src/: Layout.tsx  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_models.rs  db.rs  file_utils.rs  lib.rs  main.rs  models.rs  sync.rs  utils.rs
src-tauri/src/cloud_backend/: auth.rs  client.rs  config.rs  mod.rs
src-tauri/src/commands/: attachment.rs  auth.rs  catalog.rs  config.rs  engine.rs  llama_server.rs  llm.rs  mcp.rs  mcp_catalog.rs  mod.rs  provider_config.rs  server.rs  skill.rs  update.rs
src-tauri/src/core/: db.rs  mod.rs  models.rs  secure_store.rs  state.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/engine/: installer.rs  llama_cpp.rs  mod.rs  vllm.rs
src-tauri/src/plugins/mcp/: connection.rs  error.rs  http.rs  mod.rs  stdio.rs
src-tauri/src/plugins/provider/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/utils/: file_parser.rs  mod.rs
src/components/: AccountSettings.css  AccountSettings.tsx  Icon.tsx  (+34 more)
(+31 files in other folders)
