[package]
name = "aio"
version = "0.2.12"
description = "A Tauri App"
authors = ["Loch"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pdf-extract = "0.7"
zip = "0.6"
xml-rs = "0.8"
encoding_rs = "0.8"
dashmap = "6.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.4.5"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
base64 = "0.22.1"
